--- a/YCR.ipynb
+++ b/YCR.ipynb
@@ -45,54 +45,9 @@
     "id": "OrqOMl1bG5Fn",
     "outputId": "00a8680c-abe7-4c63-d09d-538d5c7349c1"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (4.31.0)\n",
-      "Requirement already satisfied: tqdm in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (4.66.1)\n",
-      "Requirement already satisfied: ipywidgets in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (8.1.0)\n",
-      "Requirement already satisfied: filelock in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (3.9.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.14.1 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (0.16.4)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (1.25.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (23.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (2023.8.8)\n",
-      "Requirement already satisfied: requests in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (2.31.0)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (0.13.3)\n",
-      "Requirement already satisfied: safetensors>=0.3.1 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from transformers) (0.3.2)\n",
-      "Requirement already satisfied: comm>=0.1.3 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipywidgets) (0.1.4)\n",
-      "Requirement already satisfied: ipython>=6.1.0 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipywidgets) (8.14.0)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipywidgets) (5.9.0)\n",
-      "Requirement already satisfied: widgetsnbextension~=4.0.7 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipywidgets) (4.0.8)\n",
-      "Requirement already satisfied: jupyterlab-widgets~=3.0.7 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipywidgets) (3.0.8)\n",
-      "Requirement already satisfied: fsspec in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.14.1->transformers) (2023.6.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.14.1->transformers) (4.7.1)\n",
-      "Requirement already satisfied: backcall in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
-      "Requirement already satisfied: decorator in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.19.0)\n",
-      "Requirement already satisfied: matplotlib-inline in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
-      "Requirement already satisfied: pickleshare in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.39)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (2.16.1)\n",
-      "Requirement already satisfied: stack-data in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.6.2)\n",
-      "Requirement already satisfied: pexpect>4.3 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (4.8.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from requests->transformers) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from requests->transformers) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from requests->transformers) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from requests->transformers) (2023.7.22)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
-      "Requirement already satisfied: wcwidth in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython>=6.1.0->ipywidgets) (0.2.6)\n",
-      "Requirement already satisfied: executing>=1.2.0 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (1.2.0)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.2.1)\n",
-      "Requirement already satisfied: pure-eval in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
-      "Requirement already satisfied: six in /home/kyle/micromamba/envs/llm/lib/python3.10/site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%capture \n",
     "!pip install transformers tqdm ipywidgets\n",
     "\n",
     "from IPython.display import HTML, display\n",
@@ -233,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -268,7 +223,6 @@
       "Implementing direct capture...\n",
       "Checking that the camera's not on...\n",
       "Setting up Green Screen...\n",
-      "[2023-09-02 02:11:57,060] [INFO] [real_accelerator.py:133:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "Loaded model.\n"
      ]
     }
@@ -299,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -330,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa95d79eb6bd497a95ef736278e2529e",
+       "model_id": "985d1419a9364ea9bbc1d6123c9820c2",
        "version_major": 2,
        "version_minor": 0
       },
