Add colab link to landing page

--- a/YCR.ipynb
+++ b/YCR.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "D2X1LtZfOp9s"
@@ -12,8 +13,7 @@
     "this notebook works without it; it will just be slow. Please use these compute resources responsibly, as people who have better things to do than make fun of Pigroach also rely on them.\n",
     "\n",
     "To get started...\n",
-    "1.   Click the little down arrow next to \"RAM\" and \"Disk\" in the top right,\n",
-    "and click \"Change runtime type\" if electing to use a GPU. Select T4.\n",
+    "1.   Click the little down arrow next to \"RAM\" and \"Disk\" in the top right, and click \"Change runtime type\" if electing to use a GPU. Select T4.\n",
     "2.   Click the same arrow and \"Connect to a hosted runtime\"\n",
     "3.   Run all the setup by clicking \"Runtime > Run All\" or the shortcut ctrl+F9\n",
     "4.   You can repeatedly generate new text by changing the settings in the last cell, and then rerunning it by clicking the Play arrow that appears when you mouse-over, or with ctrl+Enter.\n",
